namespace SupermarketPricing.Supermarket.Discounts.DiscountTypes;

internal static class DiscountType
{
    public const string BogoDiscount = "BogoDiscount";
    public const string VolumeDiscount = "VolumeDiscount";
    public const string SeasonalDiscount = "SeasonalDiscount";
    public const string LoyaltyDiscount = "LoyaltyDiscount";
}